--- a/server/views/pages/courtAppearance/check-next-hearing-answers.njk
+++ b/server/views/pages/courtAppearance/check-next-hearing-answers.njk
@@ -53,12 +53,12 @@
                             text: "Next hearing location"
                         },
                             value: {
-                            text: nextHearingCourtName
+                            text: nextAppearanceCourtName
                         },
                             actions: {
                             items: [
                                 {
-                                    href: "/person/" + nomsId + "/" + addOrEditCourtCase + "/" +courtCaseReference  + "/" + addOrEditCourtAppearance + "/" + appearanceReference + "/next-hearing-court-select?submitToCheckAnswers=true",
+                                    href: "/person/" + nomsId + "/" + addOrEditCourtCase + "/" +courtCaseReference  + "/" + addOrEditCourtAppearance + "/" + appearanceReference + "/next-appearance-court-select?submitToCheckAnswers=true",
                                     text: "Edit",
                                     visuallyHiddenText: "next hearing location"
                                 }
