RASS-1714 more next hearing to next appearance changes (#1214)
* RASS-1714 more next hearing to next appearance changes

* more renames

* rename next hearing date

* more rename

* more renames

* more renames

* more renames

--- a/server/views/pages/courtAppearance/appearance-details.njk
+++ b/server/views/pages/courtAppearance/appearance-details.njk
@@ -72,7 +72,7 @@
   }
 }) %}
 
-{% set nextHearingSummaryRows = [{
+{% set nextAppearanceSummaryRows = [{
   key: { text: "Next appearance set" },
   value: { text: "Yes" if appearance.nextAppearanceSelect else "No future appearance scheduled" },
   actions: {
@@ -86,13 +86,13 @@
 }] %}
 
 {% if appearance.nextAppearanceSelect %}
-  {% set nextHearingSummaryRows = nextHearingSummaryRows.concat([
+  {% set nextAppearanceSummaryRows = nextAppearanceSummaryRows.concat([
     {
       key: { text: "Location" },
-      value: { text: courtMap[appearance.nextHearingCourtCode] },
+      value: { text: courtMap[appearance.nextAppearanceCourtCode] },
       actions: {
         items: [{
-          href: "/person/" + nomsId + "/" + addOrEditCourtCase + "/" + courtCaseReference + "/" + addOrEditCourtAppearance + "/" + appearanceReference + "/next-hearing-court-name",
+          href: "/person/" + nomsId + "/" + addOrEditCourtCase + "/" + courtCaseReference + "/" + addOrEditCourtAppearance + "/" + appearanceReference + "/next-appearance-court-name",
           text: "Edit",
           visuallyHiddenText: "Next hearing court name",
           classes: "govuk-link--no-visited-state"
@@ -113,10 +113,10 @@
     },
     {
       key: { text: "Date" },
-      value: { text: appearance.nextHearingDate | formatDateTime(appearance.nextHearingTimeSet) },
+      value: { text: appearance.nextAppearanceDate | formatDateTime(appearance.nextAppearanceTimeSet) },
       actions: {
         items: [{
-          href: "/person/" + nomsId + "/" + addOrEditCourtCase + "/" + courtCaseReference + "/" + addOrEditCourtAppearance + "/" + appearanceReference + "/next-hearing-date",
+          href: "/person/" + nomsId + "/" + addOrEditCourtCase + "/" + courtCaseReference + "/" + addOrEditCourtAppearance + "/" + appearanceReference + "/next-appearance-date",
           text: "Edit",
           visuallyHiddenText: "next hearing date",
           classes: "govuk-link--no-visited-state"
@@ -179,8 +179,8 @@
 
       {{ govukSummaryList({
         card: { title: { text: "Next court appearance" } },
-        rows: nextHearingSummaryRows,
-        attributes: { "data-qa": "nextHearingSummaryList" }
+        rows: nextAppearanceSummaryRows,
+        attributes: { "data-qa": "nextAppearanceSummaryList" }
       }) }}
 
       {{ govukSummaryList({
