RASS-1715 wording updates for next hearing to next appearance

--- a/server/views/pages/courtAppearance/appearance-details.njk
+++ b/server/views/pages/courtAppearance/appearance-details.njk
@@ -94,19 +94,19 @@
         items: [{
           href: "/person/" + nomsId + "/" + addOrEditCourtCase + "/" + courtCaseReference + "/" + addOrEditCourtAppearance + "/" + appearanceReference + "/next-appearance-court-name",
           text: "Edit",
-          visuallyHiddenText: "Next hearing court name",
+          visuallyHiddenText: "Next appearance court name",
           classes: "govuk-link--no-visited-state"
         }]
       }
     },
     {
-      key: { text: "Hearing type" },
+      key: { text: "Appearance type" },
       value: { text: appearanceTypeDescription },
       actions: {
         items: [{
           href: "/person/" + nomsId + "/" + addOrEditCourtCase + "/" + courtCaseReference + "/" + addOrEditCourtAppearance + "/" + appearanceReference + "/next-appearance-type",
           text: "Edit",
-          visuallyHiddenText: "Next hearing type",
+          visuallyHiddenText: "Next appearance type",
           classes: "govuk-link--no-visited-state"
         }]
       }
@@ -118,7 +118,7 @@
         items: [{
           href: "/person/" + nomsId + "/" + addOrEditCourtCase + "/" + courtCaseReference + "/" + addOrEditCourtAppearance + "/" + appearanceReference + "/next-appearance-date",
           text: "Edit",
-          visuallyHiddenText: "next hearing date",
+          visuallyHiddenText: "next appearance date",
           classes: "govuk-link--no-visited-state"
         }]
       }
