--- a/server/views/pages/start.njk
+++ b/server/views/pages/start.njk
@@ -84,7 +84,7 @@
                             {% if courtCaseDetails.warrantType !== 'SENTENCING' %}
                               {% set courtCaseSummaryRows = (courtCaseSummaryRows.concat(
                                       {
-                                          key: { text: "Next hearing"},
+                                          key: { text: "Next appearance"},
                                           value: { html: nextAppearanceHtml }
                                       }
                               ))%}
