RASS-1676-small refactoring

--- a/server/views/pages/update-missing-sentence-information.njk
+++ b/server/views/pages/update-missing-sentence-information.njk
@@ -44,7 +44,7 @@
                     listItems: {
                         classes: "govuk-!-margin-top-4 govuk-!-margin-bottom-2",
                         items: [{
-                            html: '<a href="/person/' + nomsId + '/update-sentence/' + sentence.chargeUuid + '" data-qa="update-sentence-link-'+ sentence.chargeUuid +'" class="govuk-link govuk-link--no-visited-state">Update sentence information</a>'
+                            html: '<a href="/person/' + nomsId + '/unknown-recall-sentence/court-appearance/' + sentenceGroup.appearanceUuid +'/charge/'+sentence.chargeUuid+'/load-charge'+ '" data-qa="update-sentence-link-'+ sentence.chargeUuid +'" class="govuk-link govuk-link--no-visited-state">Update sentence information</a>'
                         }]
                     }
                 })
