--- a/server/views/pages/offence/review-offences.njk
+++ b/server/views/pages/offence/review-offences.njk
@@ -117,6 +117,7 @@
                             classes: "govuk-fieldset__legend--m"
                             }
                         },
+                        errorMessage: errors | findError("changeOffence"),
                         items: [
                             {
                                 value: "true",
